# wd

./: .gitignore  Cargo.toml  README.md  hugefile.txt  jj.md  suggestions.md  test.sh
.github/workflows/: rust.yml
benches/: my_benchmark.rs
src/: action.rs  app.rs  event.rs  lib.rs  logging.rs  main.rs  myoldlib.rs  myoldmain.rs  tui.rs  utils.rs
src/components/: drain_handler.rs  filter.rs  filter_screen.rs  go_screen.rs  home.rs  logger.rs  mod.rs  text_entry.rs
src/dateparser/: datetime.rs  mod.rs
src/drainrs/: mod.rs
