[package]
name = "wd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cursive = "0.19"
cursive = { git = "https://github.com/gyscos/cursive", features=["ansi"]}
log = "0.4.17"
memmap = "0.7.0"
dateparser="0.1.7"
chrono = "0.4"
ansi_term = "0.12.1"
unicode-width = "0.1.5"
bstr = "1.0.0"
env_logger = "0.9.0"
test-env-log = "0.2.8"