[package]
name = "wd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
# cursive = "0.19"
# cursive = { git = "https://github.com/gyscos/cursive", features=["ansi"]}
# log = "0.4.17"
memmap = "0.7.0"
# Using a local custom fork.
# Return naive datetimes in LocalTime rather than Utc
# Support 04:04:01.2323232 <-- non-integer-second naive timestamps
# dateparser="0.1.7"
lazy_static = "1.4.0"

chrono = "0.4.24"
# ansi_term = "0.12.1"
unicode-width = "0.1.5"
bstr = "1.0.0"
# env_logger = "0.9.0"
test-env-log = "0.2.8"
# regex = "0.2"

ratatui = {version = "0.29.0", features = ["crossterm"]}
# ratatui = {version = "0.20.0"}
crossterm = { version = "0.27", default-features = false, features = [
  "event-stream",
] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
unicode-segmentation = "1.10.1"
anyhow = "1.0.71"
better-panic = "0.3.0"
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.28"
tracing-macros = "0.0.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
env_logger = "0.10.0"
directories = "5.0.1"
tui-logger = { version = "0.17.3", default-features = false, features = [
  "tracing-support",
] }
colored = "2.0.0"
log = "0.4.19"
  # version = "0.2.0",
# tui-textarea = { git = "https://github.com/rhysd/tui-textarea", features = ["ratatui-crossterm"], default-features=false }
#tui-textarea = { git = "https://github.com/haydenflinner/tui-textarea", features = ["ratatui-crossterm", "search" ], default-features=false }
tui-textarea = "0.7.0"


# drainrs dependencies
indextree = "4.5.0"
regex = "1"
# log = "0.4.17"
thiserror = "1.0"
json_in_type = "1.1.1"
rustc-hash = "1.1.0"
borrowme = "0.0.14"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
chrono-tz = "0.8.4"

# drainrs
simple_logger = "4.0.0"
# criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false
